--- a/css/styles.css
+++ b/css/styles.css
@@ -121,9 +121,10 @@ button {
   border-width: 1px 1px 3px;
   box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
 }
-
+.second {
+    margin-bottom: 0px;
+}
 footer {
-    margin-top: -10px;
     text-align: center;
     font-size: small;
     font-style: italic;
